--- a/down.html
+++ b/down.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Video Downloader</title>
-    <style>
+   <!-- <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
@@ -67,7 +67,7 @@
             right: 10px;
             cursor: pointer;
         }
-    </style>
+    </style>*/ -->
 </head>
 <body>
     <div class="container">
